Mon Nov 16 15:40:58 1998  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Config.pm (parse_taboo_body): Call compile_pattern to get
 	generic pattern support and error checking.  Make sure uncompiled
 	pattern is displayed in bounce message.
	(parse_taboo_headers): Ditto.
	(_compile_rule): Fail when parsing the pattern if $ok is false,
 	not if $err is true.

	* lib/Majordomo.pm (list_config_set): Pretty up error message.

	* lib/Mj/Config.pm (_compile_rule): Call compile_pattern to check
 	the regexp.  Accept both supported delimiters, and pattern
 	modifiers.

Sat Nov 14 15:54:59 1998  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Config.pm (parse_delivery_rules): Allow generalized
 	patterns in address matchers.

	* lib/Mj/List.pm: Some general removal of old single-directory
 	stuff.

	* lib/Mj/SimpleDB/Text.pm (lookup_quick_regexp): Restructure; take
 	an additional flag: if ew got a hit but the regexp didn't match
 	the key then write the match back.

	* lib/Mj/SimpleDB/Base.pm (lookup_regexp): Pass that flag on.

	* lib/Mj/SimpleDB/Text.pm (remove): Pass a special flag to make
 	lookup_quick_regexp write back false matches.

	* lib/Majordomo.pm (_auxremove): Return the stripped address,
 	since that's the only thing we stored.

Fri Nov 13 01:03:17 1998  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Majordomo.pm (who_start): Only parse the regexp if one was
 	given.
	(unsubscribe): Rewrite to properly parse addresses and general
 	patterns.
	(auxremove): Rewrite to mirror unsubscribe.  Now includes access
 	checking.

	* lib/Mj/CommandProps.pm: auxremove must be marked 'noaddr'
 	because it can take a regexp as a victim.

Thu Nov 12 00:33:44 1998  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* bin/mj_email: Abort if Majordomo->new returns a string.

	* lib/Mj/Config.pm (compile_pattern): Allow more than one
 	modifier.

	* lib/Mj/TextOutput.pm (who): Modify to properly pass the compile
 	RE that the core passes back to us.
